add style + validate question

--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -18,11 +18,27 @@
     ></script>
         <!-- Estilos adicionales -->
         <style>
+          body {
+            background-color: #f2e9d2;
+            }
             .container {
                 margin-top: 50px;
             }
             #grafica {
                 margin-top: 50px;
+            }
+            .startTest {
+              background-color: #114B60;
+              border: none;
+              border-radius: 10px;
+              color: #88D498;
+              padding: 15px 32px;
+              text-align: center;
+              text-decoration: none;
+              display: inline-block;
+              font-size: 16px;
+              margin: 4px 2px;
+              cursor: pointer;
             }
         </style>
     </head>
@@ -39,7 +55,7 @@
             </div>
             <!-- Botón para volver a realizar el test -->
             <div class="d-flex justify-content-center mt-3">
-                <a href="/" class="btn btn-primary">Realizar el test nuevamente</a>
+                <a href="/" class="startTest btn btn-primary">Realizar el test nuevamente</a>
             </div>
         </div>
     </body>
