--- a/templates/estadisticas.html
+++ b/templates/estadisticas.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resultados del Test de Afinidad para Ciencia de Datos</title>
+    <title>Estadisticas del Test de Afinidad para Ciencia de Datos</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -40,35 +40,19 @@
               margin: 4px 2px;
               cursor: pointer;
             }
-            p {
-                font-size: 1.2em;
-                text-align: center;
-            }
         </style>
     </head>
     <body>
         <div class="container d-flex flex-column align-items-center justify-content-center">
-            <h1>Resultados del Test de Afinidad para Ciencia de Datos</h1>
-            <p>
-                Según tus respuestas, la disciplina de la ciencia de datos que más se ajusta a ti es:
-                <strong>{{ disciplina }}</strong>
-            </p>
-            <p>
-                El puntaje minimo para clasiﬁcar en una disciplina es:<strong> 40 pts</strong>
-                <br>
-                El puntaje maximo es:<strong> 60 pts</strong>
-            </p>
+            <h1>Estadisticas del Test de Afinidad para Ciencia de Datos</h1>
+            <p>Número total de personas que completaron el test: {{ total_personas }}</p>
             <div id="grafica">
                 <!-- Aquí se mostrará la imagen de la gráfica -->
-                <img src="data:image/png;base64,{{ grafica }}" class="img-fluid" alt="Gráfica de puntajes por disciplina" />
+                <img src="data:image/png;base64,{{ img_str }}" alt="Gráfica circular">
             </div>
             <!-- Botón para volver a realizar el test -->
             <div class="d-flex justify-content-center mt-3">
                 <a href="/" class="startTest btn btn-primary">Realizar el test nuevamente</a>
-            </div>
-              <!-- Botón para VER LAS Estadisticas -->
-            <div class="d-flex justify-content-center mt-3">
-                <a href="/estadisticas" class="startTest btn btn-primary">Ver Estadisticas</a>
             </div>
         </div>
     </body>
